Fixes collapsing issue of SectionNavigation when resizing window.

--- a/app/styles/components/action-dropdown.less
+++ b/app/styles/components/action-dropdown.less
@@ -1,4 +1,5 @@
 .ActionDropdown {
+  margin-right: 0;
   @media (max-width: @screen-xs-max) {
     margin: 0;
     border-top: 1px solid black;
